--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bluebird": "^2.3.4",
+    "body-parser": "^1.9.0",
     "debug": "^2.0.0",
     "lodash": "^2.4.1",
     "sequelize": "git+https://github.com/sequelize/sequelize.git#v2.0.0-rc1"
