--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.4",
     "pg": "^3.4.5",
+    "sinon": "^1.10.3",
     "supertest": "^0.13.0"
   },
   "keywords": []
