--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-jscs": "^1.1.2",
     "gulp-jshint": "^1.8.4",
     "gulp-mocha": "^1.1.0",
+    "gulp-shell": "^0.4.2",
     "gulp-util": "^3.0.1",
     "jshint-stylish": "^1.0.0",
     "mocha": "^1.21.4",
